--- a/src/TinderCards.css
+++ b/src/TinderCards.css
@@ -11,6 +11,12 @@
 
 }
 
+.card > h3 {
+    position: absolute;
+    bottom: 10px;
+    color: white;
+}
+
 .tinderCards__cardContainer {
     display: flex;
     justify-content: center;
