--- a/src/chatScreen.css
+++ b/src/chatScreen.css
@@ -28,3 +28,25 @@ a{
     border-radius: 20px;
     color: white
 }
+
+.chatScreen__input {
+    display: flex;
+    padding: 5px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    border-top: 1px solid lightgrey;
+}
+.chatScreen__inputfield {
+    flex: 1;
+    padding: 10px;
+    border: none;
+}
+
+.chatScreen__inputButton {
+    border: none;
+    margin-right: 20px;
+    background-color: white;
+    font-weight: bolder;
+    color: #fe3d71
+}
